matched the given input/output for case study 1

--- a/case_study_all.ipynb
+++ b/case_study_all.ipynb
@@ -16,8 +16,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The miles/gallons for this tank was 17.578125\n",
-      "The overall average miles/gallon was 17.578125\n"
+      "The miles/gallons for this tank was 22.421875\n",
+      "The miles/gallons for this tank was 19.417476\n",
+      "The miles/gallons for this tank was 24.000000\n",
+      "The overall average miles/gallon was 21.601423\n"
      ]
     }
    ],
@@ -54,9 +56,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "first dice: 4\n",
+      "second dice: 5\n",
+      "sum : 9\n",
+      "first dice: 2\n",
+      "second dice: 4\n",
+      "sum : 6\n",
       "first dice: 1\n",
-      "second dice: 2\n",
+      "second dice: 5\n",
+      "sum : 6\n",
+      "first dice: 2\n",
+      "second dice: 1\n",
       "sum : 3\n",
+      "first dice: 5\n",
+      "second dice: 1\n",
+      "sum : 6\n",
+      "first dice: 5\n",
+      "second dice: 6\n",
+      "sum : 11\n",
+      "first dice: 4\n",
+      "second dice: 3\n",
+      "sum : 7\n",
       "You Lose :(\n"
      ]
     }
